# AgentSPL

./: Anchor.toml  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
.tinysgent/: settings.json
docs/: api-reference.md  configuration.md  core-concepts.md  examples.md  feature-model.md  getting-started.md  token-standard.md
docs/api/: compression.md  token.md
docs/examples/: basic-token.md  compressed-token.md
docs/guides/: state-compression.md  token-management.md
programs/agentspl/: Cargo.toml
programs/agentspl/src/: error.rs  lib.rs  state.rs
tests/: agentspl.ts
